[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/stardust_fields_1/warp_pipe.png" type="Texture" id=1]
[ext_resource path="res://misc/debug/object_test.png" type="Texture" id=2]
[ext_resource path="res://scenes/o_mario.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/o_mario_fake.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/stardust_fields_2/scene_switcher_sf2sf1.gd" type="Script" id=5]
[ext_resource path="res://scripts/o_mario_fake_play.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 109.148, 14.3261 )

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="StardustFields2" type="Node2D"]

[node name="WarpPipe" type="Sprite" parent="."]
position = Vector2( 505.779, 291.664 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Mario" parent="." instance=ExtResource( 3 )]

[node name="ObjectTest" type="Sprite" parent="."]
position = Vector2( -119.252, -206.124 )
scale = Vector2( 6.92335, 1 )
texture = ExtResource( 2 )

[node name="FakeMario" parent="." instance=ExtResource( 4 )]
position = Vector2( 291.039, -241.347 )
script = ExtResource( 6 )

[node name="EventBoundries" type="StaticBody2D" parent="."]

[node name="stardust_fields_1" type="Area2D" parent="EventBoundries"]
position = Vector2( -153.367, -322.294 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EventBoundries/stardust_fields_1"]
position = Vector2( 34.7192, 115.62 )
shape = SubResource( 1 )

[node name="Fade" type="Node2D" parent="."]
z_index = 99

[node name="ColorRect" type="ColorRect" parent="Fade"]
margin_left = -465.272
margin_top = -533.741
margin_right = 1035.73
margin_bottom = 546.259
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fade/ColorRect"]
autoplay = "fade_in"
anims/fade_in = SubResource( 2 )
anims/fade_out = SubResource( 3 )

[connection signal="body_entered" from="EventBoundries/stardust_fields_1" to="EventBoundries/stardust_fields_1" method="_on_stardust_fields_1_body_entered"]
